--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://rohanchandra.github.io/"
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Q's Blogg
+  title: Q's Blog
   avatar: assets/img/avatar.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
